<resources>
    <string name="app_name">DroidOnBoarder</string>
    <string name="about">About</string>
    <string name="about_the_project">
        This project is intended to demo how you can utilize the DroidOnBoarder
        library in your project to create a smooth and captivating intro UI.\n\n
        Enjoy.\n</string>
    <string name="launch_the_intro">Launch The Intro</string>
    <string name="github">Github</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="donate">Buy Developer A Coffee</string>
    <string name="more">More</string>
    <string name="app_author_email">info@kevinomyonga.com</string>
</resources>
